--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ nav {
     width: 212px;
     height: 48px;
     left: 586px;
-    top: 620px;
+    bottom: 80px;
     position: absolute;
     background: #3A3A3A;
     border-radius: 30px;
