--- a/styles.css
+++ b/styles.css
@@ -59,8 +59,7 @@ nav {
 .navItem.active {
     color: black;
     font-weight: 900; /* Increased font weight */
-    background-color: #D0D0D0; /* Slightly darker background */
-    border: 2px solid #3A3A3A; /* Thicker border */
+    /* background-color: #D0D0D0;  */
     font-size: 17px; /* Increased font size */
 }
 
